fix: finally fixed clicks behind overlay

--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -20,8 +20,11 @@
   aspect-ratio: 1;
 }
 
+.activeSelection {
+  cursor: default;
+}
+
 .overlay {
-  pointer-events: none;
   position: absolute;
   inset: 0;
   z-index: 10;
@@ -43,6 +46,6 @@
   align-items: center;
 }
 
-.todo {
+.unfinished {
   color: gray;
 }
